<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2">

        <LinearLayout
            android:background="#015488"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nova_viagem"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView android:text="@string/destino"/>

        <EditText
            android:id="@+id/destino"
            android:inputType="text"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="0" />
        </TableRow>

        <TextView android:text="@string/tipo_da_viagem"/>

        <RadioGroup
            android:id="@+id/tipoViagem"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/lazer"
                android:checked="true"
                android:text="@string/lazer"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <RadioButton
                android:id="@+id/negocios"
                android:text="@string/negocios"
                android:layout_marginLeft="30dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </RadioGroup>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="0" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_gravity="center"
                android:text="@string/data_da_chegada"/>

            <TextView
                android:layout_gravity="center"
                android:text="@string/data_da_saida"/>
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/dataChegada"
                android:onClick="selecionarData"
                android:text="@string/selecione"/>

            <Button
                android:id="@+id/dataSaida"
                android:onClick="selecionarData"
                android:text="@string/selecione"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="0" />
        </TableRow>

        <TextView
            android:text="@string/orcamento"/>

        <EditText
            android:id="@+id/orcamento"
            android:inputType="numberDecimal"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="0" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/quantidade_de_pessoas"/>

            <EditText
                android:id="@+id/quantidadeDePessoas"
                android:inputType="number"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="0" />
        </TableRow>

        <Button
            android:onClick="salvarViagem"
            android:text="@string/salvar"/>
    </TableLayout>

</ScrollView>