<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView3"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#015488">

        <TextView
            android:id="@+id/novo_gasto"
            android:drawableTop="@drawable/novo_gasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/novo_gasto"
            android:layout_marginTop="44dp"
            android:layout_marginLeft="50dp"
            android:clickable="true"
            android:onClick="selecionarOpcao"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/nova_viagem"
            android:drawableTop="@drawable/nova_viagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nova_viagem"
            android:clickable="true"
            android:onClick="selecionarOpcao"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_alignTop="@+id/novo_gasto"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"/>

        <TextView
            android:id="@+id/minhas_viagens"
            android:drawableTop="@drawable/minhas_viagens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minhas_viagens"
            android:clickable="true"
            android:onClick="selecionarOpcao"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_alignBottom="@+id/configuracoes"
            android:layout_alignLeft="@+id/novo_gasto"
            android:layout_alignStart="@+id/novo_gasto" />

        <TextView
            android:id="@+id/configuracoes"
            android:drawableTop="@drawable/configuracoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configuracoes"
            android:clickable="true"
            android:onClick="selecionarOpcao"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_below="@+id/nova_viagem"
            android:layout_alignLeft="@+id/nova_viagem"
            android:layout_alignStart="@+id/nova_viagem"
            android:layout_marginTop="67dp" />


    </RelativeLayout>


</LinearLayout>